objects/POLineFeeSetup__c.object
<CustomObject>
    <description>Setup object to manage PO Line Items</description>
    <fields>
        <fullName>Financial_Offering__c</fullName>
        <label>Financial Offering</label>
        <picklist>
            <picklistValues>
                <fullName>TPS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Item_Description__c</fullName>
        <formula>Item__r.Description__c</formula>
        <label>Item Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>POLineFeeSetups</relationshipLabel>
        <relationshipName>POLineFeeSetups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MaxFit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True means it&apos;s a MaxFit Orignation Item. Used in the query while creating POLines. Created as part of TPS MaxFit Pricing.</description>
        <label>MaxFit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MileStone__c</fullName>
        <label>MileStone</label>
        <picklist>
            <picklistValues>
                <fullName>LEASE ORIGINATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PERMIT RECEIVED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LEASE INSTALLATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LEASE INTERCONNECT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ORIGINATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INSTALLATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INTERCONNECT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to Installation Model. Created for Loan Backend project.</description>
        <label>Model</label>
        <referenceTo>Installation_Model__c</referenceTo>
        <relationshipLabel>POLineFeeSetups</relationshipLabel>
        <relationshipName>POLineFeeSetups</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Role__c</fullName>
        <label>Partner Role</label>
        <picklist>
            <picklistValues>
                <fullName>TPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DRIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Percentage__c</fullName>
        <label>Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Value_From__c</fullName>
        <description>Field from which the fee value will be derived. For example, service lines are read from quote.dealer-fees__c.</description>
        <label>Value From</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>POLineFeeSetup</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Financial_Offering__c</columns>
        <columns>Partner_Role__c</columns>
        <columns>MileStone__c</columns>
        <columns>Percentage__c</columns>
        <columns>Item__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>POLFS-{000}</displayFormat>
        <label>POLineFeeSetup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>POLineFeeSetups</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>